// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelRepositoryLocationListItem matches snapshot for configurable repo 1`] = `
<div
  className="item"
  role="list"
>
  <div
    className="numbering"
  >
    2
  </div>
  <div
    className="location-item"
    role="listitem"
  >
    <div
      className="item-details"
    >
      <ListItemConfigurableRepo
        formState={
          [
            {
              "dirty": false,
              "repositoryLocationSettings": [
                {
                  "repositoryLocationType": "PUBLIC",
                  "value": "",
                },
              ],
              "repositoryLocationSettingsErrors": {},
            },
            {
              "setDirtyFlag": [Function],
              "setRepositoryLocationSettings": [Function],
              "setRepositoryLocationSettingsErrors": [Function],
            },
          ]
        }
        index={1}
        item={
          {
            "repositoryLocationType": "CONFIGURABLE",
            "value": "test.com",
          }
        }
      />
    </div>
    <CustomizedIconButton
      ariaLabel="modelRepository.commands.remove.ariaLabel"
      className="remove-button"
      iconProps={
        {
          "iconName": "Cancel",
        }
      }
      onClick={[Function]}
      title="modelRepository.commands.remove.label"
    />
  </div>
</div>
`;

exports[`ModelRepositoryLocationListItem matches snapshot for local folder 1`] = `
<div
  className="item"
  role="list"
>
  <div
    className="numbering"
  >
    3
  </div>
  <div
    className="location-item"
    role="listitem"
  >
    <div
      className="item-details"
    >
      <ListItemLocal
        formState={
          [
            {
              "dirty": false,
              "repositoryLocationSettings": [
                {
                  "repositoryLocationType": "PUBLIC",
                  "value": "",
                },
              ],
              "repositoryLocationSettingsErrors": {},
            },
            {
              "setDirtyFlag": [Function],
              "setRepositoryLocationSettings": [Function],
              "setRepositoryLocationSettingsErrors": [Function],
            },
          ]
        }
        index={2}
        item={
          {
            "repositoryLocationType": "LOCAL",
            "value": "c:/models",
          }
        }
        repoType="LOCAL"
      />
    </div>
    <CustomizedIconButton
      ariaLabel="modelRepository.commands.remove.ariaLabel"
      className="remove-button"
      iconProps={
        {
          "iconName": "Cancel",
        }
      }
      onClick={[Function]}
      title="modelRepository.commands.remove.label"
    />
  </div>
</div>
`;

exports[`ModelRepositoryLocationListItem matches snapshot for local repo 1`] = `
<div
  className="item"
  role="list"
>
  <div
    className="numbering"
  >
    4
  </div>
  <div
    className="location-item"
    role="listitem"
  >
    <div
      className="item-details"
    >
      <ListItemLocal
        formState={
          [
            {
              "dirty": false,
              "repositoryLocationSettings": [
                {
                  "repositoryLocationType": "PUBLIC",
                  "value": "",
                },
              ],
              "repositoryLocationSettingsErrors": {},
            },
            {
              "setDirtyFlag": [Function],
              "setRepositoryLocationSettings": [Function],
              "setRepositoryLocationSettingsErrors": [Function],
            },
          ]
        }
        index={3}
        item={
          {
            "repositoryLocationType": "DMR",
            "value": "c:/dtmi",
          }
        }
        repoType="DMR"
      />
    </div>
    <CustomizedIconButton
      ariaLabel="modelRepository.commands.remove.ariaLabel"
      className="remove-button"
      iconProps={
        {
          "iconName": "Cancel",
        }
      }
      onClick={[Function]}
      title="modelRepository.commands.remove.label"
    />
  </div>
</div>
`;

exports[`ModelRepositoryLocationListItem matches snapshot for public repo 1`] = `
<div
  className="item"
  role="list"
>
  <div
    className="numbering"
  >
    1
  </div>
  <div
    className="location-item"
    role="listitem"
  >
    <div
      className="item-details"
    >
      <ListItemPublicRepo />
    </div>
    <CustomizedIconButton
      ariaLabel="modelRepository.commands.remove.ariaLabel"
      className="remove-button"
      iconProps={
        {
          "iconName": "Cancel",
        }
      }
      onClick={[Function]}
      title="modelRepository.commands.remove.label"
    />
  </div>
</div>
`;
